--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,10 +43,6 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.1'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.11.1'
 
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.1'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.11.1'
-    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.11.1'
-
 }
 
 application {
@@ -60,26 +56,26 @@ checkstyle {
     maxErrors = 0
 }
 
-//test {
-//    finalizedBy jacocoTestReport // report is always generated after tests run
-//    finalizedBy jacocoTestCoverageVerification
-//    // report is always generated after tests run
-//}
-//
-//jacocoTestReport {
-//    dependsOn test // tests are required to run before generating the report
-//}
-//
-//jacoco {
-//    toolVersion = "0.8.6"
-//}
-//
-//jacocoTestCoverageVerification {
-//    violationRules {
-//        rule {
-//            limit {
-//                minimum = 0.0
-//            }
-//        }
-//    }
-//}
+test {
+    finalizedBy jacocoTestReport // report is always generated after tests run
+    finalizedBy jacocoTestCoverageVerification
+    // report is always generated after tests run
+}
+
+jacocoTestReport {
+    dependsOn test // tests are required to run before generating the report
+}
+
+jacoco {
+    toolVersion = "0.8.6"
+}
+
+jacocoTestCoverageVerification {
+    violationRules {
+        rule {
+            limit {
+                minimum = 0.9
+            }
+        }
+    }
+}
