--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     // Use the awesome Spock testing and specification framework even with Java
     testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
     testImplementation 'junit:junit:4.13'
+    testImplementation 'org.spockframework:spock-spring:1.3-groovy-2.5'
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:29.0-jre'
@@ -68,7 +69,7 @@ jacocoTestCoverageVerification {
     violationRules {
         rule {
             limit {
-                minimum = 0.8
+                minimum = 0.85
             }
         }
     }
@@ -87,7 +88,7 @@ jacocoTestReport {
         classDirectories.setFrom(files(classDirectories.files.collect {
             fileTree(dir: it, exclude:
                     ['pl/futurecollars/invoicing/App.class',
-                     'pl/futurecollars/invoicing/controller/**'
+                     'pl/futurecollars/invoicing/InvoiceApplication.class'
                     ])
         }))
     }
