--- a/app/src/main/resources/application-sql.yml
+++ b/app/src/main/resources/application-sql.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+    url: jdbc:postgresql://localhost:8888/invoicing-test
+    username: postgres
+    password: admin
+    driver-class-name: org.postgresql.Driver
   flyway:
     enabled: true
 
