--- a/app/src/test/resources/application-sql-pg.yml
+++ b/app/src/test/resources/application-sql-pg.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:8888/invoicing-test
     username: postgres
-    password: postgres
+    password: admin
     driver-class-name: org.postgresql.Driver
   flyway:
     enabled: true
