--- a/frontend/invoicing-app/package.json
+++ b/frontend/invoicing-app/package.json
@@ -10,23 +10,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.1.0",
-    "@angular/common": "~12.1.0",
-    "@angular/compiler": "~12.1.0",
-    "@angular/core": "~12.1.0",
-    "@angular/forms": "~12.1.0",
-    "@angular/platform-browser": "~12.1.0",
-    "@angular/platform-browser-dynamic": "~12.1.0",
-    "@angular/router": "~12.1.0",
-    "@ng-bootstrap/ng-bootstrap": "^9.1.3",
+    "@angular/animations": "^12.1.0",
+    "@angular/common": "^12.1.0",
+    "@angular/compiler": "^12.1.0",
+    "@angular/core": "^12.1.0",
+    "@angular/forms": "^12.1.0",
+    "@angular/localize": "^12.1.0",
+    "@angular/platform-browser": "^12.1.0",
+    "@angular/platform-browser-dynamic": "^12.1.0",
+    "@angular/router": "^12.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^11.0.0-beta.1",
+    "bootstrap": "^4.5.0",
     "rxjs": "~6.6.0",
-    "tslib": "^2.2.0",
+    "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.1.0",
-    "@angular/cli": "~12.1.0",
-    "@angular/compiler-cli": "~12.1.0",
+    "@angular-devkit/build-angular": "^12.1.0",
+    "@angular/cli": "^12.1.0",
+    "@angular/compiler-cli": "^12.1.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.7.0",
@@ -35,6 +37,6 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "typescript": "~4.3.2"
+    "typescript": "~4.2.3"
   }
 }
